--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,11 +11,12 @@ source:
     sha256: {{ sha256 }}
 
 build:
-    number: 1000
+    number: 1001
 
 requirements:
     build:
         - cmake
+        - make  # [unix]
         - {{ compiler('cxx') }}
     host:
         - python
