--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,6 +37,7 @@ about:
     home: https://github.com/pybind/pybind11/
     license: BSD 3-Clause
     summary: Seamless operability between C++11 and Python
+    license_file: LICENSE
 
 extra:
   recipe-maintainers:
