--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
     - gh2146.patch
 
 build:
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -27,6 +27,13 @@ requirements:
     - python
 
 test:
+  requires:                         # [osx]
+    - {{ compiler('cxx') }}         # [osx]
+    - make                          # [osx]
+    - pip                           # [osx]
+  files:                            # [osx]
+    - pybind11_exception_rtti_test  # [osx]
+    - run_exception_rtti_test.sh    # [osx]
   imports:
     - pybind11
   commands:
@@ -36,6 +43,7 @@ test:
     - if exist %LIBRARY_INC%\pybind11\pybind11.h (exit 0) else (exit 1)      # [win]
     - test -f $(python -c "import pybind11 as py; print(py.get_include())")/pybind11/pybind11.h      # [unix]
     - if exist $(python -c "import pybind11 as py; print(py.get_include())")\pybind11\pybind11.h (exit 0) else (exit 1)      # [win]
+    - bash exception_rtti_test.sh  # [osx]
 
 about:
   home: https://github.com/pybind/pybind11/
