--- a/recipe/pybind11_exception_rtti_test/Makefile
+++ b/recipe/pybind11_exception_rtti_test/Makefile
@@ -1,4 +1,4 @@
-COMP=clang
+COMP=${CXX}
 ifeq ($(shell uname -s), Linux)
 EXTRA_FLAGS=
 PRINTLIBS=LD_LIBRARY_PATH=../src
@@ -8,9 +8,7 @@ else
 EXTRA_FLAGS=-undefined dynamic_lookup
 PRINTLIBS=DYLD_FALLBACK_LIBRARY_PATH=../src DYLD_PRINT_LIBRARIES=YES
 SUFFIX=$(shell python3-config --extension-suffix)
-# CXXFLAGS=-fPIC -O2 -stdlib=libc++ -std=c++14 -isystem ${PREFIX}/include
 SOEXT=.dylib
-# LDFLAGS="${LDFLAGS}"-Wl,-rpath,${PREFIX}/lib -L${PREFIX}/lib -mlinker-version=${TEST_LD_VER}
 endif
 
 test: clean pymod
