--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -1,7 +1,11 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
+cdt_arch:
+- aarch64
 cdt_name:
-- cos6
+- cos7
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -9,12 +13,16 @@ cxx_compiler:
 cxx_compiler_version:
 - '9'
 docker_image:
-- quay.io/condaforge/linux-anvil-comp7
+- quay.io/condaforge/linux-anvil-aarch64
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
+- 3.6.* *_73_pypy
+- 3.6.* *_cpython
+- 3.7.* *_cpython
 - 3.8.* *_cpython
+- 3.9.* *_cpython
 target_platform:
-- linux-64
+- linux-aarch64
