--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set version = "2.6.1" %}
 {% set sha256 = "cdbe326d357f18b83d10322ba202d69f11b2f49e2d87ade0dc2be0c5c34f8e2a" %}
+{% set abi_version = "42" %}  # TODO: what should this be?
 
 package:
   name: pybind11-split
@@ -11,9 +12,15 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1
+  number: 2
 
 outputs:
+  - name: pybind11-abi
+    version: {{ abi_version }}
+    build:
+      run_exports:
+        - pybind11-abi =={{ abi_version }}
+
   - name: pybind11-global
     script: build-pybind11-global.sh   # [unix]
     script: build-pybind11-global.bat  # [win]
@@ -51,6 +58,8 @@ outputs:
       run:
         - python
         - {{ pin_subpackage("pybind11-global", exact=True) }}
+      run_constrained:
+        - pybind11-abi =={{ abi_version }}
     test:
       imports:
         - pybind11
