WIP looser ABI compat for pybind11

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,10 +14,12 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
 
 outputs:
   - name: pybind11-abi
+    script: build-pybind11-abi.sh  # [unix]
+    # script: build-pybind11-abi.bat  # [win]
     version: {{ abi_version }}
     build:
       noarch: generic
@@ -30,6 +32,9 @@ outputs:
       commands:
         # make sure the internals version matches the package version
         - if [ $(grep "#define PYBIND11_INTERNALS_VERSION" include/pybind11/detail/internals.h | cut -d' ' -f3) != "{{ abi_version }}" ]; then exit 1; fi
+        - test -f ${PREFIX}/etc/conda/activate.d/pybind11-abi_activate.sh            # [unix]
+        - test -f ${PREFIX}/etc/conda/deactivate.d/pybind11-abi_deactivate.sh        # [unix]
+        - echo ${CXXFLAGS} | grep "-DPYBIND11_COMPILER_TYPE= -DPYBIND11_BUILD_ABI="  # [unix]
 
   - name: pybind11-global
     script: build-pybind11-global.sh  # [unix]
