--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ outputs:
     version: {{ conda_forge_abi_epoch }}!{{ abi_version }}
     build:
       noarch: generic
-      skip: true  # [not linux64]
+      skip: true  # [not linux]
       run_exports:
         - pybind11-abi =={{ conda_forge_abi_epoch }}!{{ abi_version }}
     test:
