--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,22 +22,20 @@ build:
 
 outputs:
   - name: pybind11-abi
-    script: build-pybind11-abi.sh
+    script: build-pybind11-abi.sh  # [unix]
     version: {{ conda_forge_abi_epoch }}!{{ abi_version }}
     build:
-      noarch: generic
-      skip: true  # [not linux64]
       run_exports:
         - pybind11-abi =={{ conda_forge_abi_epoch }}!{{ abi_version }}
-    test:
-      source_files:
-        - include/pybind11/detail/internals.h
-      commands:
+    test:                                       # [unix]
+      source_files:                             # [unix]
+        - include/pybind11/detail/internals.h   # [unix]
+      commands:                                 # [unix]
         # make sure the internals version matches the package version
-        - if [ "$(grep '#    define PYBIND11_INTERNALS_VERSION 4' include/pybind11/detail/internals.h | cut -d' ' -f4)" != "{{ abi_version }}" ]; then exit 1; fi
-        - test -f ${PREFIX}/etc/conda/activate.d/pybind11-abi_activate.sh
-        - test -f ${PREFIX}/etc/conda/deactivate.d/pybind11-abi_deactivate.sh
-        - echo ${CXXFLAGS} | grep -e "-DPYBIND11_COMPILER_TYPE= -DPYBIND11_BUILD_ABI="
+        - if [ "$(grep '#    define PYBIND11_INTERNALS_VERSION 4' include/pybind11/detail/internals.h | cut -d' ' -f4)" != "{{ abi_version }}" ]; then exit 1; fi  # [unix]
+        - test -f ${PREFIX}/etc/conda/activate.d/pybind11-abi_activate.sh               # [unix]
+        - test -f ${PREFIX}/etc/conda/deactivate.d/pybind11-abi_deactivate.sh           # [unix]
+        - echo ${CXXFLAGS} | grep -e "-DPYBIND11_COMPILER_TYPE= -DPYBIND11_BUILD_ABI="  # [unix]
 
   - name: pybind11-global
     script: build-pybind11-global.sh  # [unix]
