--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -13,5 +13,7 @@ github:
 provider:
   linux_aarch64: default
   linux_ppc64le: default
-  win: azure
 test: native_and_emulated
+noarch_platforms:
+  - linux_64
+  - win_64
