--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,6 +29,9 @@ outputs:
       noarch: generic
       run_exports:
         - pybind11-abi =={{ abi_version }}
+      # This output is broken. Disabling for now
+      # See https://github.com/conda-forge/pybind11-feedstock/issues/96
+      skip: True
     test:
       source_files:
         - include/pybind11/detail/internals.h
