--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,6 +56,7 @@ outputs:
         - python {{ python_min }}
         - pip
         - setuptools
+        - scikit-build-core
       run:
         - python >={{ python_min }}
         # layouts are different on unix vs win
