Update pybind11-global install scripts

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -57,6 +57,7 @@ outputs:
         - pip
         - setuptools
         - scikit-build-core
+        - tomlkit
       run:
         - python >={{ python_min }}
         # layouts are different on unix vs win
