--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,12 +1,14 @@
+conda_build_tool: rattler-build
+conda_install_tool: pixi
 bot:
   automerge: false
 build_platform:
   linux_aarch64: linux_64
   linux_ppc64le: linux_64
   osx_arm64: osx_64
-conda_build:
-  pkg_format: '2'
 conda_forge_output_validation: true
+conda_build:
+  error_overlinking: true
 github:
   branch_name: main
   tooling_branch_name: main
