--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -30,6 +30,8 @@ outputs:
       - files:
           source:
             - include/pybind11/detail/internals.h
+          recipe:
+            - check_abi.py
         # make sure the internals version matches the package version
         # this check is not perfect as it does not account for the actual preprocessor logic in the header,
         # so please check it manually on each release
