Revert "fix: try simpler form now that it's executable"
This reverts commit 07a5ba8ba265385c26cb22f6a00e07943aece94e.

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -30,10 +30,12 @@ outputs:
       - files:
           source:
             - include/pybind11/detail/internals.h
+          recipe:
+            - check_abi.py
         # make sure the internals version matches the package version
         # this check is not perfect as it does not account for the actual preprocessor logic in the header,
         # so please check it manually on each release
-        script: check_abi.py ${{ abi_version }}
+        script: ./check_abi.py ${{ abi_version }}
 
   - package:
       name: pybind11-global
